Revision history for Perl module CBOR::Free

0.18
- Make CBOR text strings always decode to UTF8-flaged Perl strings. This is an
  admittedly-imperfect attempt to preserve distinctly-typed text strings
  in Perl (a language that, by design, doesn’t distinguish text vs. binary).
  The POD has described this behavior for some time; it just was never
  implemented correctly until now.

0.17 17 Jan 2020
- Make documentation more accurate regarding Perl strings.

0.16 19 Nov 2019
- Make tests accommodate floating-point bug in pre-5.24 Windows perls.

0.15 18 Nov 2019
- BUG FIX: Several memory leaks on error conditions are fixed.
- Add optional preserve/shared references support.
- Speed up “canonical” ordering.

0.14 9 Nov 2019
- BREAKING CHANGE: The encoder now requires a flag to encode scalar references.
  (The decoder still handles them all the time.)
- Accommodate quadmath builds in tests, and mention them in documentation
  regarding rounding.

0.13 8 Nov 2019
- Add (automatic) support for the “indirection” tag.

0.12 30 Jun 2019
- BREAKING CHANGE (minor): Unrecognized tagged values now prompt a warning.
  This means that decode() will warn() on every tagged value.
- Fix bug in parsing arguments to encode().
- Create CBOR::Free::Decoder class, which allows configurable parsing
  of tagged values.
- Refactor C code to be more modular and maintainable.

0.11 20 Jun 2019
- BREAKING CHANGE: $CBOR::Free::true and $CBOR::Free::false no longer exist.
- Lighten memory usage significantly by deferring load of Types::Serialiser
  until it’s needed.
- Tweak documentation a bit for accuracy.

0.10 14 Jun 2019
- Fix test & number stringification on 32-bit Perls (broken in 0.09).

0.09 14 Jun 2019
- Further optimizations.
- Test fixes (obscure MSWin32?)
- Always encode Inf, -Inf, and NaN to half-precision.
- Fix off-by-one in error message when trying to decode -(~0).

0.08 10 May 2019
- Further decoding speed-ups.

0.07 9 May 2019
- Dramatic speed-up in both encode and decode.